# pytest-coverage-contexts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
coveragectx/: __init__.py
coveragectx/coverage/: cli.py  plugin.py
coveragectx/coverage/site/: sitecustomize.py
coveragectx/pytest/: plugin.py
tests/functional/: test_cli.py
