[metadata]
name = pytest-coverage-context
description = Coverage dynamic context support for PyTest, including sub-processes
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/saltstack/pytest-salt-factories
project_urls =
    Source=https://github.com/saltstack/pytest-salt-factories
    Tracker=https://github.com/saltstack/pytest-salt-factories/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = all

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
setup_requires =
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[requirements-files]
install_requires = requirements.txt

[options.packages.find]
exclude =
  tests*

[options.entry_points]
console_scripts =
  pytest-coverage-context = coveragectx.coverage.cli:main
pytest11=
  coveragectx = coveragectx.pytest.plugin

[bdist_wheel]
universal = false
